# LS_File_Based_CMS

./: .gitignore  app.py  pyproject.toml
cms/content/: about.md
static/javascripts/: applications.js
static/stylesheets/: styles.css
templates/: edit_file.html  home.html  index.html  layout.html  post.html
tests/: test_app.py
