[tool.poetry]
name = "file-based-cms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "file_based_cms"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.3"
markdown = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
